# imageCategorizer

./: .gitignore  CMakeLists.txt  reformatCode.sh
source/: MainWindow.cxx  MainWindow.hxx  NewProjectDialog.cxx  NewProjectDialog.hxx  PreferenceDialog.cxx  PreferenceDialog.hxx  VersionInformation.cxx.in  VersionInformation.hxx  main.cxx
source/ui/: MainWindow.ui  NewProjectDialog.ui  PreferenceDialog.ui
